--- a/docs/docs/tutorials/chatbot.ipynb
+++ b/docs/docs/tutorials/chatbot.ipynb
@@ -590,7 +590,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that we have added a new `language` input to the prompt. Our application now has two parameters-- the input `messages` and `language`. We should update our application's state to reflect this:"
+    "Note that we have added a new `language` input to the prompt. Our application now has two parameters-- the input `messages` and `language`. We must create our own `State` class and update our application's state from the `MessagesState` class to `State` to reflect this:"
    ]
   },
   {
@@ -614,9 +614,11 @@
     "    language: str\n",
     "\n",
     "\n",
+    "# highlight-next-line\n",
     "workflow = StateGraph(state_schema=State)\n",
     "\n",
     "\n",
+    "# highlight-next-line\n",
     "def call_model(state: State):\n",
     "    chain = prompt | model\n",
     "    response = chain.invoke(state)\n",
